🏗️ components/ui -> ui

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,15 +1,15 @@
 ---
 import favicon from '@/assets/favicon.webp';
 import ogDefault from '@/assets/og.webp';
-import { buttonVariants } from '@/components/ui/button.astro';
-import Clipboard from '@/components/ui/clipboard.astro';
-import Icon from '@/components/ui/icon.astro';
-import Link from '@/components/ui/link.astro';
-import * as NavigationMenu from '@/components/ui/navigation-menu';
-import Separator from '@/components/ui/separator.astro';
-import Text from '@/components/ui/text.astro';
-import Theme from '@/components/ui/theme.astro';
 import '@/tailwind.css';
+import { buttonVariants } from '@/ui/button.astro';
+import Clipboard from '@/ui/clipboard.astro';
+import Icon from '@/ui/icon.astro';
+import Link from '@/ui/link.astro';
+import * as NavigationMenu from '@/ui/navigation-menu';
+import Separator from '@/ui/separator.astro';
+import Text from '@/ui/text.astro';
+import Theme from '@/ui/theme.astro';
 import '@fontsource/geist-sans';
 import type { HTMLAttributes } from 'astro/types';
 import * as env from 'astro:env/server';
