--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
-import Icon from '@/components/ui/icon.astro';
-import Link from '@/components/ui/link.astro';
-import Text from '@/components/ui/text.astro';
 import Layout from '@/layouts/layout.astro';
+import Icon from '@/ui/icon.astro';
+import Link from '@/ui/link.astro';
+import Text from '@/ui/text.astro';
 ---
 
 <Layout class="text-center">
