--- a/src/pages/blog/_github.astro
+++ b/src/pages/blog/_github.astro
@@ -1,7 +1,7 @@
 ---
+import Icon from '@/ui/icon.astro';
+import Text from '@/ui/text.astro';
 import type { CollectionEntry } from 'astro:content';
-import Icon from './ui/icon.astro';
-import Text from './ui/text.astro';
 
 type Props = { repo: NonNullable<CollectionEntry<'posts'>['data']['repo']> };
 
