--- a/src/pages/blog/_search.astro
+++ b/src/pages/blog/_search.astro
@@ -1,11 +1,11 @@
 ---
-import Button from '@/components/ui/button.astro';
-import Command from '@/components/ui/command.astro';
-import * as Dialog from '@/components/ui/dialog';
-import Icon from '@/components/ui/icon.astro';
-import Link from '@/components/ui/link.astro';
-import Text from '@/components/ui/text.astro';
-import Textfield from '@/components/ui/textfield.astro';
+import Button from '@/ui/button.astro';
+import Command from '@/ui/command.astro';
+import * as Dialog from '@/ui/dialog';
+import Icon from '@/ui/icon.astro';
+import Link from '@/ui/link.astro';
+import Text from '@/ui/text.astro';
+import Textfield from '@/ui/textfield.astro';
 import { PAGEFIND_LINK } from 'astro:env/server';
 ---
 
