--- a/src/ui/navigation-menu/components/link.astro
+++ b/src/ui/navigation-menu/components/link.astro
@@ -1,5 +1,5 @@
 ---
-import Component from '@/components/ui/link.astro';
+import Component from '@/ui/link.astro';
 import type { ComponentProps } from 'astro/types';
 import { twMerge } from 'tailwind-merge';
 
