--- a/src/pages/components/_post-views.astro
+++ b/src/pages/components/_post-views.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import Number from '@/components/number.astro';
 import type { ComponentProps } from 'astro/types';
 import type { CollectionEntry } from 'astro:content';
