--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,5 +1,5 @@
 ---
-import { getSortedPosts, POSTS_PAGE_SIZE } from '@/libs/content';
+import { getSortedPosts, POSTS_PAGE_SIZE } from '@/content';
 import PostsTemplate from '@/pages/components/_posts-template.astro';
 import type { GetStaticPaths } from 'astro';
 
