--- a/src/pages/components/_post-card.astro
+++ b/src/pages/components/_post-card.astro
@@ -1,10 +1,12 @@
 ---
+import Banner from '@/../public/images/banner.png';
 import * as Component from '@/components/card';
 import Chip from '@/components/chip.astro';
 import Date from '@/components/date.astro';
 import Icon from '@/components/icon.astro';
 import Text from '@/components/text.astro';
-import type { GetSortedPosts } from '@/libs/content';
+import type { GetSortedPosts } from '@/content';
+import { Image } from 'astro:assets';
 
 type Props = GetSortedPosts[0];
 
@@ -13,8 +15,11 @@ const { id, data } = Astro.props;
 
 <Component.Root as="a" href={`/blog/${id}`}>
   <Component.Header>
-    <div class="flex flex-wrap gap-2">{data?.topics.map(({ text }) => <Chip value={text} variant="soft" />)}</div>
+    <div class="rounded-border mb-1 h-24 overflow-hidden">
+      <Image src={Banner.src} alt="" width={Banner.width} height={Banner.height} class="-translate-y-5" />
+    </div>
     <Text weight="bold">{data.title}</Text>
+    <div class="flex flex-wrap gap-2">{data?.topics.map(({ text }) => <Chip value={text} variant="soft" />)}</div>
   </Component.Header>
   <Component.Body>
     <Text size="2" variant="subtle">{data.description}</Text>
