--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,9 +2,18 @@
 
 @variant dark (&:where(.dark, .dark *));
 
+@font-face {
+  font-family: 'Henry';
+  src: url('/fonts/Henry.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 @theme {
   --default-font-family: 'Geist Sans';
   --default-mono-font-family: 'Geist Mono';
+  --font-henry: 'Henry';
 
   --text-2xs: clamp(0.76rem, calc(0.76rem + (0.02 * (100vw - 20rem) / 76)), 0.8rem);
   --text-xs: clamp(0.87rem, calc(0.87rem + (0.02 * (100vw - 20rem) / 76)), 0.889rem);
