--- a/src/pages/components/_post-card.astro
+++ b/src/pages/components/_post-card.astro
@@ -1,11 +1,10 @@
 ---
-import Banner from '@/../public/images/banner.png';
 import * as Component from '@/components/card';
 import Chip from '@/components/chip.astro';
 import Date from '@/components/date.astro';
 import Icon from '@/components/icon.astro';
 import Text from '@/components/text.astro';
-import type { GetSortedPosts } from '@/content';
+import type { GetSortedPosts } from '@/content.utils';
 import { Image } from 'astro:assets';
 
 type Props = GetSortedPosts[0];
@@ -16,7 +15,8 @@ const { id, data } = Astro.props;
 <Component.Root as="a" href={`/blog/${id}`}>
   <Component.Header>
     <div class="rounded-border mb-1 h-24 overflow-hidden">
-      <Image src={Banner.src} alt="" width={Banner.width} height={Banner.height} class="-translate-y-5" />
+      <Image {...data.coverDark} alt="Cover" loading="eager" layout="full-width" class="rounded not-dark:hidden" />
+      <Image {...data.coverLight} alt="Cover" loading="eager" layout="full-width" class="rounded dark:hidden" />
     </div>
     <Text weight="bold">{data.title}</Text>
     <div class="flex flex-wrap gap-2">{data?.topics.map(({ text }) => <Chip value={text} variant="soft" />)}</div>
