--- a/src/pages/components/_posts-template.astro
+++ b/src/pages/components/_posts-template.astro
@@ -7,7 +7,7 @@ import * as Paginator from '@/components/paginator';
 import Section from '@/components/section.astro';
 import Separator from '@/components/separator.astro';
 import Text from '@/components/text.astro';
-import { getAllTopics, type GetAllTopics, type GetSortedPosts } from '@/content';
+import { getAllTopics, type GetAllTopics, type GetSortedPosts } from '@/content.utils';
 import Layout from '@/layouts/index.astro';
 import type { Page } from 'astro';
 import PostsSearch from './_post-search.astro';
