--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Link from '@/components/link.astro';
 import * as List from '@/components/list';
 import Section from '@/components/section.astro';
 import Text from '@/components/text.astro';
-import { getSortedPosts } from '@/content';
+import { getSortedPosts } from '@/content.utils';
 import Layout from '@/layouts/index.astro';
 import { getCollection } from 'astro:content';
 import * as env from 'astro:env/server';
