--- a/src/pages/blog/[topic]/[...page].astro
+++ b/src/pages/blog/[topic]/[...page].astro
@@ -1,5 +1,5 @@
 ---
-import { getAllTopics, getSortedPosts, POSTS_PAGE_SIZE } from '@/content';
+import { getAllTopics, getSortedPosts, POSTS_PAGE_SIZE } from '@/content.utils';
 import PostsTemplate from '@/pages/components/_posts-template.astro';
 import type { GetStaticPaths, InferGetStaticPropsType } from 'astro';
 
