✨ Table of Contents

--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -24,7 +24,10 @@ const {
 } = Astro.props;
 ---
 
-<html lang="en" class="scrollbar selection:bg-accent-5 scroll-pt-24 antialiased [scrollbar-gutter:stable]">
+<html
+  lang="en"
+  class="scrollbar scroll-progress-root selection:bg-accent-5 scroll-pt-24 antialiased [scrollbar-gutter:stable]"
+>
   <head>
     <title>{title}</title>
     <meta charset="utf-8" />
