--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -6,6 +6,7 @@ import * as NavigationMenu from '@/components/navigation-menu';
 import Text from '@/components/text.astro';
 import Theme from '@/components/theme.astro';
 import '@/tailwind.css';
+import '@fontsource-variable/eb-garamond';
 import '@fontsource/geist-mono';
 import '@fontsource/geist-sans';
 import { ThemeScript } from 'astro-theme-toggle';
