--- a/src/pages/components/_posts-template.astro
+++ b/src/pages/components/_posts-template.astro
@@ -20,8 +20,8 @@ const { data: paginatedPosts, topic: activeTopic, url, currentPage, lastPage } =
 
 <Layout title="Christian Penrod | Blog">
   <Section class="max-w-4xl">
-    <Text as="h1" size="12" font="henry" weight="bold">BLOG POSTS</Text>
-    <Text as="h2" size="8" font="henry" variant="subtle">Explore sofware-related articles</Text>
+    <Text as="h1" size="12" font="serif" weight="bold">BLOG POSTS</Text>
+    <Text as="h2" size="8" font="serif" variant="subtle">Explore sofware-related articles</Text>
   </Section>
   <Section class="flex max-w-4xl flex-col gap-6">
     <PostsSearch />
