--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ const socialIconButton = buttonVariants({ variant: 'ghost', size: 'icon', classN
 
 <Layout class="counter-root">
   <Section class="max-w-5xl">
-    <Text as="h1" size="12" font="henry" weight="bold" class="not-sm:text-5xl">CHRISTIAN PENROD</Text>
-    <Text as="h2" size="12" font="henry" variant="subtle" class="not-sm:text-4xl">Front-End Web Developer</Text>
+    <Text as="h1" size="12" font="serif" weight="bold" class="not-sm:text-5xl">CHRISTIAN PENROD</Text>
+    <Text as="h2" size="12" font="serif" variant="subtle" class="not-sm:text-4xl">Front-End Web Developer</Text>
     <Text variant="subtle" class="my-6 not-sm:text-xs not-sm:**:text-xs">
       Working on the web since 2018. I'm a web developer who enjoys creating efficient web experiences through code and
       design. As well as educating others along the way. Currently working at
@@ -36,7 +36,7 @@ const socialIconButton = buttonVariants({ variant: 'ghost', size: 'icon', classN
     </List.Root>
   </Section>
   <Section class="flex max-w-5xl flex-col">
-    <Text font="henry" size="6" weight="bold" class="counter-item before:text-lg">PROJECTS SHOWCASE</Text>
+    <Text font="serif" size="6" weight="bold" class="counter-item before:text-lg">PROJECTS SHOWCASE</Text>
     <Text variant="subtle">I work with various web-based projects on the side.</Text>
     <!-- prettier-ignore -->
     <List.Root class="grid gap-x-6 gap-y-10 md:grid-cols-2 mt-10">
@@ -45,7 +45,7 @@ const socialIconButton = buttonVariants({ variant: 'ghost', size: 'icon', classN
     <Link href={env.GITHUB} size="2" class="mt-10 self-end">View Github Profile</Link>
   </Section>
   <Section class="flex max-w-5xl flex-col">
-    <Text as="h2" font="henry" size="6" weight="bold" class="counter-item before:text-lg">RECENTLY PUBLISHED</Text>
+    <Text as="h2" font="serif" size="6" weight="bold" class="counter-item before:text-lg">RECENTLY PUBLISHED</Text>
     <Text variant="subtle">I write about web development and developer experience tooling.</Text>
     <!-- prettier-ignore -->
     <List.Root class="grid gap-x-6 gap-y-10 md:grid-cols-3 my-10">
