🏗️ Move /public -> /assets

--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,5 +1,5 @@
 ---
-import Me from '@/../public/images/me.png';
+import Me from '@/assets/me.png';
 import Button from '@/components/button.astro';
 import Callout from '@/components/callout.astro';
 import * as Code from '@/components/code';
